--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -57,24 +57,24 @@ jobs:
           # Set up Android SDK path
           export ANDROID_SDK_ROOT=$HOME/.android/sdk
           mkdir -p $ANDROID_SDK_ROOT
-
+          
           # Download Android Command-line Tools
           wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -O /tmp/cmdtools.zip
           unzip -q /tmp/cmdtools.zip -d $ANDROID_SDK_ROOT
           mkdir -p $ANDROID_SDK_ROOT/cmdline-tools/latest
           mv $ANDROID_SDK_ROOT/cmdline-tools/* $ANDROID_SDK_ROOT/cmdline-tools/latest/ 2>/dev/null || true
-
+          
           # Add to PATH
           export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH
-
+          
           # Accept licenses and install SDK packages
-          echo "y" | sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platforms;android-33" "build-tools;33.0.2" "ndk;25.2.9519653" 2>/dev/null || true
-
+          yes | sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platforms;android-33" 
+          yes | sdkmanager --sdk_root=$ANDROID_SDK_ROOT "build-tools;33.0.2"
+          yes | sdkmanager --sdk_root=$ANDROID_SDK_ROOT "ndk;25.2.9519653"
+          
           echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT" >> $GITHUB_ENV
           echo "ANDROID_NDK_ROOT=$ANDROID_SDK_ROOT/ndk/25.2.9519653" >> $GITHUB_ENV
-          echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin" >> $GITHUB_PATH
-
-      - name: Build Android APK with buildozer
+          echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin" >> $GITHUB_PATH      - name: Build Android APK with buildozer
         run: |
           # Set environment variables for buildozer
           export ANDROID_SDK_ROOT=${{ env.ANDROID_SDK_ROOT }}
