--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -68,9 +68,10 @@ jobs:
           export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH
 
           # Accept licenses and install SDK packages
-          yes | sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platforms;android-33" 2>&1
-          yes | sdkmanager --sdk_root=$ANDROID_SDK_ROOT "build-tools;33.0.2" 2>&1
-          yes | sdkmanager --sdk_root=$ANDROID_SDK_ROOT "ndk;25.2.9519653" 2>&1
+          mkdir -p $HOME/.android
+          touch $HOME/.android/repositories.cfg
+          
+          sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platforms;android-33" "build-tools;33.0.2" "ndk;25.2.9519653" <<< $'y\ny\ny\n' 2>&1
 
           echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT" >> $GITHUB_ENV
           echo "ANDROID_NDK_ROOT=$ANDROID_SDK_ROOT/ndk/25.2.9519653" >> $GITHUB_ENV
