--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -70,8 +70,14 @@ jobs:
           # Accept licenses and install SDK packages
           mkdir -p $HOME/.android
           touch $HOME/.android/repositories.cfg
-          
-          sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platforms;android-33" "build-tools;33.0.2" "ndk;25.2.9519653" <<< $'y\ny\ny\n' 2>&1
+
+          # Update SDK manager first
+          sdkmanager --sdk_root=$ANDROID_SDK_ROOT --update 2>&1 || true
+
+          # Install packages with --install flag
+          sdkmanager --sdk_root=$ANDROID_SDK_ROOT --install "platforms;android-33" 2>&1 || true
+          sdkmanager --sdk_root=$ANDROID_SDK_ROOT --install "build-tools;33.0.2" 2>&1 || true
+          sdkmanager --sdk_root=$ANDROID_SDK_ROOT --install "ndk;25.2.9519653" 2>&1 || true
 
           echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT" >> $GITHUB_ENV
           echo "ANDROID_NDK_ROOT=$ANDROID_SDK_ROOT/ndk/25.2.9519653" >> $GITHUB_ENV
