--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -86,6 +86,10 @@ jobs:
           echo "$ANDROID_SDK_ROOT/build-tools/33.0.2" >> $GITHUB_PATH
           echo "$ANDROID_SDK_ROOT/platform-tools" >> $GITHUB_PATH
 
+          # Verify installation
+          ls -la $ANDROID_SDK_ROOT/build-tools/ || echo "build-tools not found"
+          ls -la $ANDROID_SDK_ROOT/ndk/ || echo "ndk not found"
+
       - name: Build Android APK with buildozer
         run: |
           # Set environment variables for buildozer
