--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -96,8 +96,28 @@ jobs:
           export ANDROID_SDK_ROOT=${{ env.ANDROID_SDK_ROOT }}
           export ANDROID_NDK_ROOT=${{ env.ANDROID_NDK_ROOT }}
 
-          # Run buildozer
-          buildozer -v android debug
+          # Debug: Check buildozer configuration
+          echo "=== Buildozer Configuration ==="
+          cat buildozer.spec | grep -E "android\.(sdk|ndk|api|minapi|build_tools)"
+
+          # Debug: Check paths
+          echo "=== Environment Paths ==="
+          echo "ANDROID_SDK_ROOT: $ANDROID_SDK_ROOT"
+          echo "ANDROID_NDK_ROOT: $ANDROID_NDK_ROOT"
+          echo "PATH: $PATH"
+
+          # Debug: Check SDK installation
+          echo "=== SDK Installation Check ==="
+          ls -la $ANDROID_SDK_ROOT/build-tools/ 2>/dev/null || echo "build-tools not found"
+          ls -la $ANDROID_SDK_ROOT/ndk/ 2>/dev/null || echo "ndk not found"
+
+          # Run buildozer with verbose logging
+          echo "=== Starting Buildozer Build ==="
+          buildozer -v android debug 2>&1 | tee build.log
+
+          # Print last 100 lines of build log on error
+          echo "=== Build Result ==="
+          tail -100 build.log
 
       - name: List build output
         if: always()
